package frontend.view;

import javax.swing.*;

public interface IContent {
    String showContent(JPanel content);
}
